Fix captcha widget on mobile devices

--- a/src/stylesheets/_widgets.scss
+++ b/src/stylesheets/_widgets.scss
@@ -6,6 +6,9 @@
 	height: 100vh;
 	width: 100vw;
 
+	justify-content: center;
+	align-items: center;
+
 	&:not([hidden]){
 		display: flex;
 		z-index: 1000
