--- a/src/stylesheets/desktop.scss
+++ b/src/stylesheets/desktop.scss
@@ -57,11 +57,6 @@
 
 @import "_widgets";
 
-.widget{
-	justify-content: center;
-	align-items: center;
-}
-
 .widgetBox{
 	min-width: 30vw;
 	min-height: 50vh;
